crates/ty_python_semantic/resources/mdtest/snapshots/unsupported_bool_con…_-_Different_ways_that_…_-_Has_a_`__bool__`_met…_(15636dc4074e5335).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: unsupported_bool_conversion.md - Different ways that `unsupported-bool-conversion` can occur - Has a `__bool__` method, but has an incorrect return type
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unsupported_bool_conversion.md
---

# Python source files

## mdtest_snippet.py

```
1 | class NotBoolable:
2 |     def __bool__(self) -> str:
3 |         return "wat"
4 | 
5 | a = NotBoolable()
6 | 
7 | # error: [unsupported-bool-conversion]
8 | 10 and a and True
```

# Diagnostics

```
error[unsupported-bool-conversion]: Boolean conversion is unsupported for type `NotBoolable`
 --> src/mdtest_snippet.py:8:8
  |
7 | # error: [unsupported-bool-conversion]
8 | 10 and a and True
  |        ^
  |
info: `str` is not assignable to `bool`
 --> src/mdtest_snippet.py:2:9
  |
1 | class NotBoolable:
2 |     def __bool__(self) -> str:
  |         --------          ^^^ Incorrect return type
  |         |
  |         Method defined here
3 |         return "wat"
  |
info: rule `unsupported-bool-conversion` is enabled by default

```
